# scripture-editor-proto

./: .env.example  .gitignore  AGENTS.MD  App-store-connect-scripture-editor.p8  BIOME-USAGE.md  README.md  SRC-CORE-STRUCTURE.md  adjustTests.xml  ai-notes.md  biome.json  biome.jsonc  components.json  index.html  knip.json  lefthook.yml  lingui.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  scratch.md  scripture-editor.xml  test_tokens.js  tk  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.tauri.config.ts  vite.web.config.ts  vitest.config.ts  web.html  wrangler.jsonc
.tickets/: 1.1.md  1.2.md  1.3.md  1.4.md  1.5.md  1.6.md  1.md  2.1.md  2.2.md  2.3.md  2.4.md  2.md  3.1.md  3.2.md  3.3.md  3.4.md  3.5.md  3.6.md  3.7.md  3.md  4.1.md  4.2.md  4.3.md  4.4.md  4.md  5.1.md  5.10.md  5.2.md  5.3.md  5.4.md  5.5.md  5.6.md  5.7.md  5.8.md  5.9.md  5.md  sep2-05fb.md  sep2-1a93.md  sep2-2ab6.md  sep2-606c.md  (+5 more)
plans/: plan-context-menu-refactor.md  plan-lockless-modes.md  prd-context-menu-refactor.json  prd-lockless-modes.json  progress-context-menu-refactor.md
product-docs/: TECH_STACK.md  agent-learnings.md
prompts/: FRONTEND.MD  LEXICAL.MD  OVERVIEW.MD  PLAYWRIGHT-TESTING-GUIDELINES.md
scripts/: checkArchitecture.mjs  exportMigrations.js  syncVersions.js
src-core/: index.ts  (+1 more)
src/tauri/rust/: .gitignore  Cargo.toml  tauri.conf.ci_cache.json  tauri.conf.json
src/tauri/rust/capabilities/: default.json  desktop.json
src/tauri/rust/icons/: icon.icns
src/tauri/rust/src/: git.rs  lib.rs  md5.rs  usfm_onion.rs
(+692 files in other folders)
